JOORSAND/src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Email_from_chat__c</fullName>
        <label>Email from chat</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Time_to_interrupt__c</fullName>
        <label>Time to interrupt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>CSM_PS_Chat_Queue_LiveChatTranscript</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <label>CSM/PS Chat Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Live_Agent_Queue_LiveChatTranscript</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <columns>Case</columns>
        <columns>Time_to_interrupt__c</columns>
        <columns>WaitTime</columns>
        <filterScope>Everything</filterScope>
        <label>Live Agent Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Support_and_RSM_chat_queue_LiveChatTranscript</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <label>Product_Support_and_RSM_chat</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RSM_PS_Chat_Queue_LiveChatTranscript</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <label>RSM/PS Chat Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>